--- a/src/global.css
+++ b/src/global.css
@@ -1,3 +1,29 @@
+:root {
+  --color-primary-1: #01080e;
+  --color-primary-2: #011627;
+  --color-primary-3: #011221;
+  --color-secondary-1: #607b96;
+  --color-secondary-2: #3c9d93;
+  --color-secondary-3: #4d5bce;
+  --color-secondary-4: #ffffff;
+  --color-accent-1: #fea55f;
+  --color-accent-2: #43d9ad;
+  --color-accent-3: #e99287;
+  --color-accent-4: #c98bdf;
+  --color-line: #1e2d3d;
+
+  --font-size-headline: 62px;
+  --font-size-subheadline: 32px;
+  --font-size-body: 18px;
+  --font-size-label: 16px;
+  --font-size-code: 14px;
+  --font-size-annotation: 12px;
+
+  --border: 1px solid var(--color-line);
+
+  --transition: all 0.25s ease-in-out;
+}
+
 body {
   margin: 0;
 }
