feat: Update font-size settings in global.css
The change modifies the font-size from being applied on the body element to the html element in the global.css file. The adjustment to the specific element helps to ensure uniformity across different browsers and provide smoother overall user experience.

--- a/src/global.css
+++ b/src/global.css
@@ -24,7 +24,8 @@
   --transition: all 0.25s ease-in-out;
 }
 
-body {
+html {
+  font-size: var(--font-size-body);
   color: var(--color-secondary-4);
   background-color: var(--color-primary-2);
 }
