feat: Add transition effect to links in global CSS
A transition effect has been added to the anchor tags in the global CSS file. This will provide a smoother visual effect when users interact with links on the website.

--- a/src/global.css
+++ b/src/global.css
@@ -28,4 +28,8 @@ html {
   font-size: var(--font-size-body);
   color: var(--color-secondary-4);
   background-color: var(--color-primary-2);
+
+  & a {
+    transition: var(--transition);
+  }
 }
