feat: Add locked state to header navigation items
The change introduces a locked state to the navigation items in the header. This visual cue is set by a change in CSS and serves to inhibit user interaction with the active navigation link, thereby improving the user interface through a clear indicator of the currently active page.

--- a/src/components/ui/header/header.module.css
+++ b/src/components/ui/header/header.module.css
@@ -33,6 +33,14 @@
         flex-grow: 1;
       }
 
+      &.locked {
+        & a {
+          color: var(--color-secondary-4);
+          box-shadow: inset 0 -3px 0 var(--color-accent-1);
+          pointer-events: none;
+        }
+      }
+
       &:last-child {
         margin-inline-start: auto;
         border-inline-start: var(--border);
