feat: Introduce dynamic height calculation for main section
Added CSS variables for footer and header heights and dynamically calculated the main section height using these values. This change ensures the main section's height will automatically adjust if header or footer heights are modified.

--- a/src/components/ui/footer/footer.module.css
+++ b/src/components/ui/footer/footer.module.css
@@ -1,6 +1,10 @@
+:root {
+  --height-footer: 56px;
+}
+
 .footer {
   display: flex;
-  height: 56px;
+  height: var(--height-footer);
   font-size: var(--font-size-label);
   color: var(--color-secondary-1);
   border-block-start: var(--border);
