--- a/src/global.css
+++ b/src/global.css
@@ -29,6 +29,10 @@ html {
   color: var(--color-secondary-4);
   background-color: var(--color-primary-2);
 
+  & main {
+    min-height: calc(100svh - var(--height-header) - var(--height-footer));
+  }
+
   & a {
     transition: var(--transition);
   }
