--- a/src/global.css
+++ b/src/global.css
@@ -12,6 +12,11 @@
   --color-accent-4: #c98bdf;
   --color-line: #1e2d3d;
 
+  --font-family-default: monospace, "Helvetica Neue", arial,
+    "Hiragino Kaku Gothic ProN", "Hiragino Sans", meiryo, sans-serif;
+  --font-family-primary: "Fira Code Retina", "Fira Code", "Fira Code Medium",
+    "Fira Code Regular", "Fira Code Light";
+
   --font-size-headline: 62px;
   --font-size-subheadline: 32px;
   --font-size-body: 18px;
@@ -28,6 +33,10 @@ html {
   font-size: var(--font-size-body);
   color: var(--color-secondary-4);
   background-color: var(--color-primary-2);
+
+  & body {
+    font-family: var(--font-family-primary), var(--font-family-default);
+  }
 
   & main {
     min-height: calc(100svh - var(--height-header) - var(--height-footer));
