--- a/src/components/ui/header/header.module.css
+++ b/src/components/ui/header/header.module.css
@@ -37,21 +37,14 @@
         flex-grow: 1;
       }
 
-      &.locked {
-        & a {
-          color: var(--color-secondary-4);
-          box-shadow: inset 0 -3px 0 var(--color-accent-1);
-          pointer-events: none;
-        }
-      }
-
       &:last-child {
         margin-inline-start: auto;
         border-inline-start: var(--border);
         border-inline-end: none;
       }
 
-      & a {
+      & a,
+      & span {
         --gutter-x: 32px;
 
         display: flex;
@@ -63,12 +56,20 @@
         @container (width < 709px) {
           --gutter-x: 0;
         }
+      }
 
+      & a {
         &:focus-visible,
         &:hover {
           color: var(--color-secondary-4);
           box-shadow: inset 0 -3px 0 var(--color-accent-1);
         }
+      }
+
+      & span {
+        color: var(--color-secondary-4);
+        box-shadow: inset 0 -3px 0 var(--color-accent-1);
+        pointer-events: none;
       }
     }
   }
