refactor: Update header and footer CSS padding for clarity
The commit primarily refines the padding properties in the header and footer CSS modules. Padding for left and right has been declared separately instead of using shorthand for better readability and increased control over individual dimensions.

--- a/src/components/ui/footer/footer.module.css
+++ b/src/components/ui/footer/footer.module.css
@@ -38,7 +38,8 @@
     }
     &.github {
       gap: 7px;
-      padding: 0 23px;
+      padding-right: 23px;
+      padding-left: 23px;
     }
 
     &:focus-visible,
