feat: Add comment blocks and styles to description section
Added two comment blocks to the description section in index route, offering directions for gameplay and information about our Github page. Enhancements were also made in the top-page CSS module to improve visual appeal and layout of these comments.

--- a/src/routes/top-page.module.css
+++ b/src/routes/top-page.module.css
@@ -42,6 +42,50 @@ section {
       }
 
       & .description {
+        p {
+          margin-left: 1em;
+          font-size: var(--font-size-label);
+          text-indent: -1em;
+
+          & + p {
+            margin-top: 10px;
+          }
+        }
+
+        a {
+          text-decoration: underline;
+        }
+
+        & .comment {
+          container-type: inline-size;
+          color: var(--color-secondary-1);
+
+          &:nth-of-type(1) {
+            & .line {
+              @container (width < 320px) {
+                display: none;
+              }
+            }
+            & .block {
+              @container (width >= 320px) {
+                display: none;
+              }
+            }
+          }
+
+          &:nth-of-type(2) {
+            & .line {
+              @container (width < 397px) {
+                display: none;
+              }
+            }
+            & .block {
+              @container (width >= 397px) {
+                display: none;
+              }
+            }
+          }
+        }
       }
     }
   }
