feat: Add GitHub link and corresponding styles to description
Extended description section in index route with a constant denoting the GitHub link. Implemented corresponding styles in the top-page CSS module providing adaptability and enhancing the visual aspect of the new GitHub link declaration.

--- a/src/routes/top-page.module.css
+++ b/src/routes/top-page.module.css
@@ -86,6 +86,34 @@ section {
             }
           }
         }
+
+        & .declaration {
+          container-type: inline-size;
+
+          & br {
+            @container (width > 493.09px) {
+              display: none;
+            }
+          }
+
+          & a {
+            @container (width <= 326.59px) {
+              word-break: break-all;
+            }
+          }
+
+          & .kind {
+            color: var(--color-secondary-3);
+          }
+
+          & .identifier {
+            color: var(--color-accent-2);
+          }
+
+          & .literal {
+            color: var(--color-accent-3);
+          }
+        }
       }
     }
   }
