--- a/src/routes/top-page.module.css
+++ b/src/routes/top-page.module.css
@@ -39,6 +39,9 @@ section {
       }
 
       & .game {
+        background-color: cornflowerblue;
+        grid-column: 2 / 3;
+        grid-row: 1 / 3;
       }
 
       & .description {
