feat: Update aspect ratio in top-page.module.css
The .game class in top-page.module.css has been updated with an aspect-ratio of 510 / 475. This improvement will add to the site's responsiveness, ensuring better and more uniform layout display across various screen resolutions especially those less than or equal to 777px.

--- a/src/routes/top-page.module.css
+++ b/src/routes/top-page.module.css
@@ -39,6 +39,7 @@ section {
       }
 
       & .game {
+        aspect-ratio: 510 / 475;
         background-color: cornflowerblue;
         grid-column: 2 / 3;
         grid-row: 1 / 3;
