--- a/src/routes/top-page.module.css
+++ b/src/routes/top-page.module.css
@@ -21,8 +21,23 @@ section {
       padding-top: var(--gutter-y);
       padding-bottom: var(--gutter-y);
 
+      @container (width < 1103px) {
+        --gutter-y: 80px;
+
+        gap: 60px;
+      }
+
+      @container (width <= 777px) {
+        grid-template-columns: auto;
+        gap: 0;
+      }
+
       & .title {
         align-self: end;
+
+        @container (width < 1103px) {
+          grid-column: 1 / -1;
+        }
 
         h1 {
           font-size: var(--font-size-headline);
@@ -43,9 +58,33 @@ section {
         background-color: cornflowerblue;
         grid-column: 2 / 3;
         grid-row: 1 / 3;
+
+        @container (width < 1103px) {
+          grid-column: 2 / 3;
+          grid-row: auto;
+        }
+
+        @container (width <= 777px) {
+          grid-column: auto;
+          width: 100%;
+          max-width: 570px;
+          margin-inline-start: auto;
+          margin-top: 60px;
+        }
       }
 
       & .description {
+        @container (width < 1103px) {
+          grid-column: 1 / 2;
+          grid-row: 2 / 3;
+          margin-top: 40px;
+        }
+
+        @container (width <= 777px) {
+          grid-column: auto;
+          margin-top: 80px;
+        }
+
         p {
           margin-left: 1em;
           font-size: var(--font-size-label);
