--- a/src/routes/top-page.module.css
+++ b/src/routes/top-page.module.css
@@ -12,24 +12,24 @@ section {
     margin: 0 auto;
 
     & .container {
+      --gap: 80px 110px;
       --gutter-y: 40px;
 
       display: grid;
       grid-template-columns: auto 510px;
-      gap: 80px 110px;
+      gap: var(--gap);
       width: 100%;
       padding-top: var(--gutter-y);
       padding-bottom: var(--gutter-y);
 
       @container (width < 1103px) {
+        --gap: 60px;
         --gutter-y: 80px;
-
-        gap: 60px;
       }
 
       @container (width <= 777px) {
+        --gap: 0;
         grid-template-columns: auto;
-        gap: 0;
       }
 
       & .title {
