refactor: Refactor CSS styles for consistency
The CSS styles in the footer, header and global CSS files have been refactored. This includes consolidating padding styles into single lines for cleaner code, reordering properties for better readability, and standardizing color code usage.

--- a/src/components/ui/footer/footer.module.css
+++ b/src/components/ui/footer/footer.module.css
@@ -27,8 +27,7 @@
   }
 
   & p {
-    padding-inline-start: 22px;
-    padding-inline-end: 18px;
+    padding-inline: 22px 18px;
   }
 
   & a {
@@ -36,6 +35,7 @@
     &.facebook {
       width: 52px;
     }
+
     &.github {
       gap: 7px;
       padding: 0 23px;
