feat: Add border to body in global.css
A border has been added to the body in the global.css file. This change ensures consistency in the appearance of the webpage and improves overall design.

--- a/src/global.css
+++ b/src/global.css
@@ -32,6 +32,7 @@ html {
 
   & body {
     font-family: var(--font-family-primary), var(--font-family-default);
+    border: var(--border);
 
     & main {
       min-height: calc(100svh - var(--height-header) - var(--height-footer));
