refactor: Add --height-main CSS variable for main area height
Introduced a new CSS variable --height-main for calculating the main area height to increase efficiency. It replaces previous calculations of min-height properties in main element and top-page.module.css, resulting in an improved and more readable code.

--- a/src/global.css
+++ b/src/global.css
@@ -1,4 +1,5 @@
 :root {
+  --height-main: calc(100svh - var(--height-header) - var(--height-footer));
   --font-family-default: monospace, "Helvetica Neue", arial,
     "Hiragino Kaku Gothic ProN", "Hiragino Sans", meiryo, sans-serif;
   --font-family-primary: "Fira Code Retina", "Fira Code", "Fira Code Medium",
@@ -35,7 +36,7 @@ html {
     border: var(--border);
 
     & main {
-      min-height: calc(100svh - var(--height-header) - var(--height-footer));
+      min-height: var(--height-main);
     }
 
     & a {
