feat: Update positioning in game CSS module
Modified the CSS for game UI's container and polygon elements with absolute and relative positioning. Integrated "top" and "left" properties to calculate the precise position relative to the closest non-static parent. Additionally, added a "pointer-events" property set to "none" to prevent user interaction.

--- a/src/components/ui/game/game.module.css
+++ b/src/components/ui/game/game.module.css
@@ -1,7 +1,13 @@
 .container {
+  position: relative;
   aspect-ratio: 510 / 475;
   background-color: var(--color-secondary-1);
 
   & .polygon {
+    position: absolute;
+    top: calc(50% + 15px);
+    left: calc(50% + 86px);
+    pointer-events: none;
+    translate: -50% -50%;
   }
 }
