--- a/src/components/ui/game/game.module.css
+++ b/src/components/ui/game/game.module.css
@@ -1,7 +1,12 @@
 .container {
-  position: relative;
+  display: flex;
+  justify-content: space-between;
   aspect-ratio: 510 / 475;
-  background-color: var(--color-secondary-1);
+  padding: 35px 30px;
+  background: rgb(255 255 255 / 7.5%);
+  border: 1px solid var(--color-primary-1);
+  border-radius: var(--border-radius);
+  box-shadow: inset 0 1px 0 rgb(255 255 255 / 30%);
 
   & .polygon {
     position: absolute;
