--- a/src/components/ui/game/game.module.css
+++ b/src/components/ui/game/game.module.css
@@ -8,6 +8,18 @@
   border-radius: var(--border-radius);
   box-shadow: inset 0 1px 0 rgb(255 255 255 / 30%);
 
+  & .main {
+    width: 238px;
+    background: rgb(var(--color-primary-2-rgb) / 84%);
+    border-radius: var(--border-radius);
+    box-shadow: inset 1px 5px 11px rgb(var(--color-primary-1-rgb) / 71%);
+  }
+
+  & .sub {
+    width: 181px;
+    background-color: magenta;
+  }
+
   & .polygon {
     position: absolute;
     top: calc(50% + 15px);
