feat: New primary color variables in global CSS
The global CSS has been updated with additional primary color variables. These new variables would enhance color consistency, allowing for a more adaptable and cohesive visual design throughout the project.

--- a/src/global.css
+++ b/src/global.css
@@ -14,6 +14,8 @@
   --color-base-2: #011627;
   --color-base-3: #011221;
   --color-primary-1: #1e2d3d;
+  --color-primary-2: #1c2b3a;
+  --color-primary-2-lighter: #263b50;
   --color-secondary-1: #607b96;
   --color-secondary-2: #3c9d93;
   --color-secondary-3: #4d5bce;
