feat: Add new color variable in global CSS
A lighter shade of the primary accent color has been added in the global CSS. The new color variable will provide more flexibility for design, while maintaining color consistency across the application.

--- a/src/global.css
+++ b/src/global.css
@@ -21,6 +21,7 @@
   --color-secondary-3: #4d5bce;
   --color-secondary-4: #fff;
   --color-accent-1: #fea55f;
+  --color-accent-1-lighter: #ffac6b;
   --color-accent-2: #43d9ad;
   --color-accent-3: #e99287;
   --color-accent-4: #c98bdf;
