--- a/src/global.css
+++ b/src/global.css
@@ -25,6 +25,21 @@
   --color-accent-2: #43d9ad;
   --color-accent-3: #e99287;
   --color-accent-4: #c98bdf;
+  --color-base-1-rgb: 1 8 14;
+  --color-base-2-rgb: 1 22 39;
+  --color-base-3-rgb: 1 18 33;
+  --color-primary-1-rgb: 30 45 61;
+  --color-primary-2-rgb: 28 43 58;
+  --color-primary-2-lighter-rgb: 38 59 80;
+  --color-secondary-1-rgb: 96 123 150;
+  --color-secondary-2-rgb: 60 157 147;
+  --color-secondary-3-rgb: 77 91 206;
+  --color-secondary-4-rgb: 255 255 255;
+  --color-accent-1-rgb: 254 165 95;
+  --color-accent-1-lighter-rgb: 255 172 107;
+  --color-accent-2-rgb: 67 217 173;
+  --color-accent-3-rgb: 233 146 135;
+  --color-accent-4-rgb: 201 139 223;
   --border: 1px solid var(--color-primary-1);
   --border-radius: 8px;
   --transition: all 0.25s ease-in-out;
