feat: Add transition effect to buttons
The global.css file has been modified to include the transition effect to buttons. This amendment improves visual consistency throughout the application and assures a smoother user interaction.

--- a/src/global.css
+++ b/src/global.css
@@ -58,7 +58,8 @@ html {
       min-height: var(--height-main);
     }
 
-    & a {
+    & a,
+    & button {
       transition: var(--transition);
     }
 
