--- a/src/components/ui/game/game.module.css
+++ b/src/components/ui/game/game.module.css
@@ -9,10 +9,18 @@
   box-shadow: inset 0 1px 0 rgb(255 255 255 / 30%);
 
   & .main {
+    position: relative;
     width: 238px;
     background: rgb(var(--color-primary-2-rgb) / 84%);
     border-radius: var(--border-radius);
     box-shadow: inset 1px 5px 11px rgb(var(--color-primary-1-rgb) / 71%);
+
+    & button {
+      position: absolute;
+      bottom: 55px;
+      left: 50%;
+      transform: translateX(-50%);
+    }
   }
 
   & .sub {
