feat: Enhance game layout and add user instructions
Improved the CSS for the Game module to enhance game layout. Added keyboard instructions within the 'sub' div to improve user guidance and game usability.

--- a/src/components/ui/game/game.module.css
+++ b/src/components/ui/game/game.module.css
@@ -27,7 +27,24 @@
 
   & .sub {
     width: 181px;
-    background-color: magenta;
+
+    & .help {
+      padding: 13px;
+      background: rgb(var(--color-primary-2-rgb) / 19%);
+      border-radius: var(--border-radius);
+
+      /* stylelint-disable-next-line block-no-empty */
+      & .keys {
+      }
+    }
+
+    /* stylelint-disable-next-line block-no-empty */
+    & .score {
+    }
+
+    & p {
+      font-size: var(--font-size-code);
+    }
   }
 
   & .polygon {
