--- a/src/components/ui/game/game.module.css
+++ b/src/components/ui/game/game.module.css
@@ -9,9 +9,16 @@
   border-radius: var(--border-radius);
   box-shadow: inset 0 1px 0 rgb(255 255 255 / 30%);
 
+  & .polygon {
+    position: absolute;
+    top: calc(50% + 15px);
+    left: calc(50% + 86px);
+    pointer-events: none;
+    translate: -50% -50%;
+  }
+
   & .main {
     position: relative;
-    z-index: 1;
     width: 238px;
     background: rgb(var(--color-primary-2-rgb) / 84%);
     border-radius: var(--border-radius);
@@ -26,6 +33,7 @@
   }
 
   & .sub {
+    position: relative;
     width: 181px;
 
     & .help {
@@ -45,13 +53,5 @@
     & p {
       font-size: var(--font-size-code);
     }
-  }
-
-  & .polygon {
-    position: absolute;
-    top: calc(50% + 15px);
-    left: calc(50% + 86px);
-    pointer-events: none;
-    translate: -50% -50%;
   }
 }
