--- a/src/components/ui/game/key.module.css
+++ b/src/components/ui/game/key.module.css
@@ -1,3 +1,35 @@
-/* stylelint-disable-next-line block-no-empty */
 .key {
+  position: relative;
+  width: 49px;
+  height: 28px;
+  background: var(--color-primary-1);
+  border: var(--border);
+  border-radius: var(--border-radius);
+
+  & span {
+    position: absolute;
+    inset: 0;
+    width: 0;
+    height: 0;
+    margin: auto;
+    border-color: transparent transparent var(--color-secondary-4);
+    border-style: solid;
+    border-width: 0 4.25px 6px;
+
+    &.up {
+      rotate: 0deg;
+    }
+
+    &.down {
+      rotate: 180deg;
+    }
+
+    &.left {
+      rotate: 270deg;
+    }
+
+    &.right {
+      rotate: 90deg;
+    }
+  }
 }
