--- a/src/components/ui/game/game.module.css
+++ b/src/components/ui/game/game.module.css
@@ -41,8 +41,11 @@
       background: rgb(var(--color-primary-2-rgb) / 19%);
       border-radius: var(--border-radius);
 
-      /* stylelint-disable-next-line block-no-empty */
       & .keys {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 5px;
+        margin-top: 13px;
       }
     }
 
