fix: Update color variables in game related CSS files
Modified several CSS properties in the game-related UI components to replace 'color-primary' variables with 'color-base'. This change affects the appearance of borders, backgrounds and shadows, harmonizing the color palette within the game interface.

--- a/src/components/ui/game/key.module.css
+++ b/src/components/ui/game/key.module.css
@@ -2,7 +2,7 @@
   position: relative;
   width: 49px;
   height: 28px;
-  background: var(--color-primary-1);
+  background: var(--color-base-1);
   border: var(--border);
   border-radius: var(--border-radius);
 
