--- a/src/components/ui/game/game.module.css
+++ b/src/components/ui/game/game.module.css
@@ -5,7 +5,7 @@
   aspect-ratio: 510 / 475;
   padding: 35px 30px;
   background: rgb(255 255 255 / 7.5%);
-  border: 1px solid var(--color-primary-1);
+  border: 1px solid var(--color-base-1);
   border-radius: var(--border-radius);
   box-shadow: inset 0 1px 0 rgb(255 255 255 / 30%);
 
@@ -20,9 +20,9 @@
   & .main {
     position: relative;
     width: 238px;
-    background: rgb(var(--color-primary-2-rgb) / 84%);
+    background: rgb(var(--color-base-2-rgb) / 84%);
     border-radius: var(--border-radius);
-    box-shadow: inset 1px 5px 11px rgb(var(--color-primary-1-rgb) / 71%);
+    box-shadow: inset 1px 5px 11px rgb(var(--color-base-1-rgb) / 71%);
 
     & button {
       position: absolute;
@@ -38,7 +38,7 @@
 
     & .help {
       padding: 13px;
-      background: rgb(var(--color-primary-2-rgb) / 19%);
+      background: rgb(var(--color-base-2-rgb) / 19%);
       border-radius: var(--border-radius);
 
       & .keys {
