--- a/src/components/ui/game/game.module.css
+++ b/src/components/ui/game/game.module.css
@@ -13,6 +13,7 @@
     position: absolute;
     top: calc(50% + 15px);
     left: calc(50% + 86px);
+    z-index: -1;
     pointer-events: none;
     translate: -50% -50%;
   }
