feat: Update game's score display styling and content
Adjusted padding and margin of the game's score display in CSS, and added content to the score box in the Game component. This improves visibility and layout of the score, enhancing user experience during gameplay.

--- a/src/components/ui/game/game.module.css
+++ b/src/components/ui/game/game.module.css
@@ -41,8 +41,10 @@
       }
     }
 
-    /* stylelint-disable-next-line block-no-empty */
     & .score {
+      padding-right: 13px;
+      padding-left: 13px;
+      margin-top: 20px;
     }
 
     & p {
