feat: Update CSS in Game and Food components
Styling changes have been implemented in the Game and Food components to enhance their respective display properties. For Game, a grid layout has been added to the list items. Food component now includes states and uses CSS variables for better control over food item display and behaviour, adding dynamism and improving the game experience.

--- a/src/components/ui/game/food.module.css
+++ b/src/components/ui/game/food.module.css
@@ -1,3 +1,34 @@
-/* stylelint-disable-next-line block-no-empty */
 .food {
+  --size: 20px;
+  --alpha: 10%;
+
+  position: relative;
+  opacity: 1;
+
+  &,
+  &::before,
+  &::after {
+    width: var(--size);
+    height: var(--size);
+    background-color: rgb(var(--color-accent-2-rgb) / var(--alpha));
+    border-radius: 9999px;
+  }
+
+  &::before,
+  &::after {
+    position: absolute;
+    inset: 0;
+    margin: auto;
+    content: "";
+  }
+
+  &::before {
+    --size: 15px;
+    --alpha: 20%;
+  }
+
+  &::after {
+    --size: 8px;
+    --alpha: 100%;
+  }
 }
