feat: Add 'border-radius-round' variable to global CSS
A new CSS variable, '--border-radius-round', has been defined in the global.css file for wider use across all elements requiring a rounded border-radius. This change aims to increase consistency in design as it's implemented in the food.module.css, replacing a hardcoded value.

--- a/src/components/ui/game/food.module.css
+++ b/src/components/ui/game/food.module.css
@@ -11,7 +11,7 @@
     width: var(--size);
     height: var(--size);
     background-color: rgb(var(--color-accent-2-rgb) / var(--alpha));
-    border-radius: 9999px;
+    border-radius: var(--border-radius-round);
   }
 
   &::before,
