--- a/src/global.css
+++ b/src/global.css
@@ -42,6 +42,7 @@
   --color-accent-4-rgb: 201 139 223;
   --border: 1px solid var(--color-primary-1);
   --border-radius: 8px;
+  --border-radius-round: 9999px;
   --transition: all 0.25s ease-in-out;
 }
 
