feat: Add "isEaten" prop to Food component
The Food component was updated with a prop "isEaten" that changes the appearance of the Food object when eaten. Changes also include the opacity of Food component through css.

--- a/src/components/ui/game/food.module.css
+++ b/src/components/ui/game/food.module.css
@@ -1,9 +1,10 @@
 .food {
   --size: 20px;
   --alpha: 10%;
+  --opacity: 1;
 
   position: relative;
-  opacity: 1;
+  opacity: var(--opacity);
 
   &,
   &::before,
@@ -12,6 +13,10 @@
     height: var(--size);
     background-color: rgb(var(--color-accent-2-rgb) / var(--alpha));
     border-radius: var(--border-radius-round);
+  }
+
+  &.eaten {
+    --opacity: 0.3;
   }
 
   &::before,
