--- a/src/components/ui/game/game.module.css
+++ b/src/components/ui/game/game.module.css
@@ -20,7 +20,7 @@
       position: absolute;
       bottom: 55px;
       left: 50%;
-      transform: translateX(-50%);
+      translate: -50%;
     }
   }
 
