refactor: Remove redundant parent selectors in CSS
Refactored CSS code across various components and in global file by removing redundant parent selectors, simplifying the CSS rules, making it more readable. The changes not only tidy up the codebase but also have potential advantages in terms of performance by reducing CSS specificity and selector matching cost.

--- a/src/components/ui/footer/footer.module.css
+++ b/src/components/ui/footer/footer.module.css
@@ -9,28 +9,28 @@
   color: var(--color-secondary-1);
   border-block-start: var(--border);
 
-  & > :not(:last-child) {
+  > :not(:last-child) {
     border-inline-end: var(--border);
   }
 
-  & > :last-child {
+  > :last-child {
     margin-inline-start: auto;
     border-inline-start: var(--border);
   }
 
-  & p,
-  & a {
+  p,
+  a {
     display: flex;
     align-items: center;
     justify-content: center;
     height: 100%;
   }
 
-  & p {
+  p {
     padding-inline: 22px 18px;
   }
 
-  & a {
+  a {
     &.twitter,
     &.facebook {
       width: 52px;
