--- a/src/global.css
+++ b/src/global.css
@@ -51,20 +51,20 @@ html {
   color: var(--color-secondary-4);
   background-color: var(--color-base-2);
 
-  & body {
+  body {
     font-family: var(--font-family-primary), var(--font-family-default);
     border: var(--border);
 
-    & main {
+    main {
       min-height: var(--height-main);
     }
 
-    & a,
-    & button {
+    a,
+    button {
       transition: var(--transition);
     }
 
-    & i {
+    i {
       font-size: 20px;
     }
   }
