--- a/src/components/ui/game/game.module.css
+++ b/src/components/ui/game/game.module.css
@@ -9,14 +9,14 @@
   border-radius: var(--border-radius);
   box-shadow: inset 0 1px 0 rgb(255 255 255 / 30%);
 
-  & .main {
+  .main {
     position: relative;
     width: 238px;
     background: rgb(var(--color-base-2-rgb) / 84%);
     border-radius: var(--border-radius);
     box-shadow: inset 1px 5px 11px rgb(var(--color-base-1-rgb) / 71%);
 
-    & button {
+    button {
       position: absolute;
       bottom: 55px;
       left: 50%;
@@ -24,7 +24,7 @@
     }
   }
 
-  & .sub {
+  .sub {
     position: relative;
     display: flex;
     flex-direction: column;
@@ -35,11 +35,11 @@
       padding: 13px;
     }
 
-    & .help {
+    .help {
       background: rgb(var(--color-base-2-rgb) / 19%);
       border-radius: var(--border-radius);
 
-      & ul {
+      ul {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         gap: 5px;
@@ -47,8 +47,8 @@
       }
     }
 
-    & .score {
-      & ul {
+    .score {
+      ul {
         display: grid;
         grid-template-columns: repeat(5, min-content);
         gap: 7px 8px;
@@ -56,12 +56,12 @@
       }
     }
 
-    & p {
+    p {
       font-size: var(--font-size-code);
     }
   }
 
-  & .polygon {
+  .polygon {
     position: absolute;
     top: calc(50% + 15px);
     left: calc(50% + 86px);
