--- a/src/components/ui/header/navigation.module.css
+++ b/src/components/ui/header/navigation.module.css
@@ -1,12 +1,12 @@
 .navigation {
   flex: 1 1 709px;
 
-  & ul {
+  ul {
     container-type: inline-size;
     display: flex;
     height: 100%;
 
-    & li {
+    li {
       border-inline-end: var(--border);
 
       @container (width < 709px) {
@@ -19,8 +19,8 @@
         border-inline-end: none;
       }
 
-      & a,
-      & span {
+      a,
+      span {
         --gutter-x: 32px;
 
         display: flex;
@@ -35,7 +35,7 @@
         }
       }
 
-      & a {
+      a {
         &:focus-visible,
         &:hover {
           color: var(--color-secondary-4);
@@ -43,7 +43,7 @@
         }
       }
 
-      & span {
+      span {
         color: var(--color-secondary-4);
         pointer-events: none;
         box-shadow: inset 0 -3px 0 var(--color-accent-1);
