refactor: Refactor padding styling in top-page.module.css
The CSS variable --gutter-x was removed and the padding value was directly set to '0 60px'. This was done to improve code readability by simplifying the styling in the top-page.module.css file.

--- a/src/routes/top-page.module.css
+++ b/src/routes/top-page.module.css
@@ -1,7 +1,5 @@
 section {
-  --gutter-x: 60px;
-
-  padding: 0 var(--gutter-x);
+  padding: 0 60px;
 
   .wrapper {
     container-type: inline-size;
