refactor: Adjust margin settings in top-page.module.css
The CSS styling for the overall margin was edited from a general margin to individual settings for margin-right and margin-left. This change was implemented to allow more precise control over the horizontal spacing and alignment of elements in the top-page.module.css file.

--- a/src/routes/top-page.module.css
+++ b/src/routes/top-page.module.css
@@ -7,7 +7,8 @@ section {
     align-items: center;
     max-width: 1160px;
     min-height: var(--height-main);
-    margin: 0 auto;
+    margin-right: auto;
+    margin-left: auto;
 
     .container {
       --gap: 80px 110px;
