feat: Add outer gutter in global.css
Added padding and border-radius to the body, and updated the background colors for html and body in the global.css file. These changes are aimed at improving the user interface and ensuring visual consistency throughout the platform.

--- a/src/global.css
+++ b/src/global.css
@@ -47,13 +47,16 @@
 }
 
 html {
+  padding: 20px;
   font-size: var(--font-size-body);
   color: var(--color-secondary-4);
-  background-color: var(--color-base-2);
+  background-color: var(--color-base-1);
 
   body {
     font-family: var(--font-family-primary), var(--font-family-default);
+    background-color: var(--color-base-2);
     border: var(--border);
+    border-radius: var(--border-radius);
 
     main {
       min-height: var(--height-main);
