--- a/src/components/ui/header/header.module.css
+++ b/src/components/ui/header/header.module.css
@@ -14,7 +14,23 @@
 		flex-basis: 311px;
 		flex-shrink: 2;
 		align-items: center;
-		padding-inline: 22px;
 		border-inline-end: var(--border);
+
+		&:not(:has(a)),
+		a {
+			padding-inline: 22px;
+		}
+
+		a {
+			display: flex;
+			align-items: center;
+			width: 100%;
+			height: 100%;
+
+			&:focus-visible,
+			&:hover {
+				color: var(--color-secondary-4);
+			}
+		}
 	}
 }
