--- a/src/routes/index.module.css
+++ b/src/routes/index.module.css
@@ -1,165 +1,162 @@
-section {
+.wrapper {
+	container-type: inline-size;
+	box-sizing: content-box;
+	display: flex;
+	align-items: center;
+	max-inline-size: 1160px;
+	min-block-size: var(--block-size-main);
 	padding-inline: 60px;
+	margin-inline: auto;
 
-	.wrapper {
-		container-type: inline-size;
-		display: flex;
-		align-items: center;
-		max-inline-size: 1160px;
-		min-block-size: var(--block-size-main);
-		margin-inline: auto;
+	.container {
+		--gap: 80px 110px;
+		--padding-block: 40px;
 
-		.container {
-			--gap: 80px 110px;
-			--padding-block: 40px;
+		display: grid;
+		grid-template-columns: auto 510px;
+		gap: var(--gap);
+		inline-size: 100%;
+		padding-block: var(--padding-block);
 
-			display: grid;
-			grid-template-columns: auto 510px;
-			gap: var(--gap);
-			inline-size: 100%;
-			padding-block: var(--padding-block);
+		@container (inline-size < 1103px) {
+			--gap: 60px;
+			--padding-block: 80px;
+		}
+
+		@container (inline-size <= 777px) {
+			--gap: 0;
+
+			grid-template-columns: auto;
+		}
+
+		.title {
+			align-self: end;
 
 			@container (inline-size < 1103px) {
-				--gap: 60px;
-				--padding-block: 80px;
+				grid-column: 1 / -1;
+			}
+
+			h1 {
+				font-size: var(--font-size-headline);
+			}
+
+			h2 {
+				font-size: var(--font-size-body);
+			}
+
+			h3 {
+				font-size: var(--font-size-subheadline);
+				color: var(--color-secondary-3);
+			}
+		}
+
+		.game {
+			grid-row: 1 / 3;
+			grid-column: 2 / 3;
+
+			@container (inline-size < 1103px) {
+				grid-row: auto;
 			}
 
 			@container (inline-size <= 777px) {
-				--gap: 0;
+				grid-column: auto;
+				inline-size: 100%;
+				max-inline-size: 570px;
+				margin-block-start: 60px;
+				margin-inline-start: auto;
+			}
+		}
 
-				grid-template-columns: auto;
+		.description {
+			--grid-column: unset;
+
+			grid-column: var(--grid-column);
+			margin-block-start: var(--margin-block-start);
+
+			@container (inline-size < 1103px) {
+				--grid-column: 1 / 2;
+				--margin-block-start: 40px;
+
+				grid-row: 2 / 3;
 			}
 
-			.title {
-				align-self: end;
-
-				@container (inline-size < 1103px) {
-					grid-column: 1 / -1;
-				}
-
-				h1 {
-					font-size: var(--font-size-headline);
-				}
-
-				h2 {
-					font-size: var(--font-size-body);
-				}
-
-				h3 {
-					font-size: var(--font-size-subheadline);
-					color: var(--color-secondary-3);
-				}
+			@container (inline-size <= 777px) {
+				--grid-column: auto;
+				--margin-block-start: 80px;
 			}
 
-			.game {
-				grid-row: 1 / 3;
-				grid-column: 2 / 3;
+			p {
+				margin-inline-start: 1em;
+				font-size: var(--font-size-label);
+				text-indent: -1em;
 
-				@container (inline-size < 1103px) {
-					grid-row: auto;
-				}
-
-				@container (inline-size <= 777px) {
-					grid-column: auto;
-					inline-size: 100%;
-					max-inline-size: 570px;
-					margin-block-start: 60px;
-					margin-inline-start: auto;
+				+ p {
+					margin-block-start: 10px;
 				}
 			}
 
-			.description {
-				--grid-column: unset;
+			a {
+				text-decoration: underline;
+			}
 
-				grid-column: var(--grid-column);
-				margin-block-start: var(--margin-block-start);
+			.comment {
+				container-type: inline-size;
+				color: var(--color-secondary-1);
 
-				@container (inline-size < 1103px) {
-					--grid-column: 1 / 2;
-					--margin-block-start: 40px;
-
-					grid-row: 2 / 3;
-				}
-
-				@container (inline-size <= 777px) {
-					--grid-column: auto;
-					--margin-block-start: 80px;
-				}
-
-				p {
-					margin-inline-start: 1em;
-					font-size: var(--font-size-label);
-					text-indent: -1em;
-
-					+ p {
-						margin-block-start: 10px;
-					}
-				}
-
-				a {
-					text-decoration: underline;
-				}
-
-				.comment {
-					container-type: inline-size;
-					color: var(--color-secondary-1);
-
-					&:nth-of-type(1) {
-						.line {
-							@container (inline-size < 320px) {
-								display: none;
-							}
-						}
-
-						.block {
-							@container (inline-size >= 320px) {
-								display: none;
-							}
-						}
-					}
-
-					&:nth-of-type(2) {
-						.line {
-							@container (inline-size < 397px) {
-								display: none;
-							}
-						}
-
-						.block {
-							@container (inline-size >= 397px) {
-								display: none;
-							}
-						}
-					}
-				}
-
-				.declaration {
-					container-type: inline-size;
-
-					br {
-						@container (inline-size > 493.09px) {
+				&:nth-of-type(1) {
+					.line {
+						@container (inline-size < 320px) {
 							display: none;
 						}
 					}
 
-					a {
-						@container (inline-size <= 326.59px) {
-							word-break: break-all;
+					.block {
+						@container (inline-size >= 320px) {
+							display: none;
+						}
+					}
+				}
+
+				&:nth-of-type(2) {
+					.line {
+						@container (inline-size < 397px) {
+							display: none;
 						}
 					}
 
-					.kind {
-						color: var(--color-secondary-3);
-					}
-
-					.identifier {
-						color: var(--color-accent-2);
-					}
-
-					.literal {
-						color: var(--color-accent-3);
+					.block {
+						@container (inline-size >= 397px) {
+							display: none;
+						}
 					}
 				}
+			}
+
+			.declaration {
+				container-type: inline-size;
+
+				br {
+					@container (inline-size > 493.09px) {
+						display: none;
+					}
+				}
+
+				a {
+					@container (inline-size <= 326.59px) {
+						word-break: break-all;
+					}
+				}
+
+				.kind {
+					color: var(--color-secondary-3);
+				}
+
+				.identifier {
+					color: var(--color-accent-2);
+				}
+
+				.literal {
+					color: var(--color-accent-3);
 			}
 		}
 	}
