refactor: Add site title width variable in CSS
Introduced a new CSS variable for the site title width (--width-sitetitle), replacing the hardcoded flex-basis values in the header and about-me CSS modules. It enhances the reusability and consistency of code across the modules, as well as makes future updates easier.

--- a/src/components/ui/header/header.module.css
+++ b/src/components/ui/header/header.module.css
@@ -1,4 +1,5 @@
 :root {
+	--inline-size-sitetitle: 311px;
 	--block-size-header: 56px;
 }
 
@@ -11,7 +12,7 @@
 
 	.title {
 		display: flex;
-		flex-basis: 311px;
+		flex-basis: var(--inline-size-sitetitle);
 		flex-shrink: 2;
 		align-items: center;
 		border-inline-end: var(--border);
